hphp/hack/test/typecheck/class_level_where_clauses/this_as/interface_method_lookup_05.php.legacy_decl.exp
File "interface_method_lookup_05.php", line 33, characters 14-16:
No static method 'foo' in I (Typing[4090])
File "interface_method_lookup_05.php", line 14, characters 11-11:
Declaration of I is here
File "interface_method_lookup_05.php", line 37, characters 14-16:
No static method 'foo' in C (Typing[4090])
File "interface_method_lookup_05.php", line 12, characters 7-7:
Declaration of C is here
File "interface_method_lookup_05.php", line 53, characters 13-15:
No static method 'foo' in I (Typing[4090])
File "interface_method_lookup_05.php", line 14, characters 11-11:
Declaration of I is here
File "interface_method_lookup_05.php", line 57, characters 13-15:
No static method 'foo' in C (Typing[4090])
File "interface_method_lookup_05.php", line 12, characters 7-7:
Declaration of C is here
